add `.crumb`'s todo condition

--- a/src/sass/features/ships/_navcrumb.scss
+++ b/src/sass/features/ships/_navcrumb.scss
@@ -2,6 +2,7 @@
 * For default theme. Here is the style definition of `crumb` design.
 ____________________________________________________________________*/
 
+//@TODO if necessary add individual `.crumb` like it done with `.tag` feature
 
 .navcrumb {
     
