--- a/src/sass/features/ships/_tag.scss
+++ b/src/sass/features/ships/_tag.scss
@@ -4,80 +4,84 @@ __________________________________________________________________*/
 
 
 .tag {
-  
-  display: inline-block ;
-  height: $tag-height ;
-  font-size: 0.85em ;
-  font-weight: 500 ;
-  line-height: $tag-height ;
-  font-family: $item-font-family ;
-  padding: 0 $tag-padding-lr ;
-  border-radius: 16px ;
-  margin-bottom: 5px ;
-  margin-right: 5px ;
-  max-width: $tag-max-width ;
-  
-  @include global-bg-look( $tag-colors) ;
-  @include style-overflow-of("line") ;
-  
-  .close {
-    
-    cursor: pointer ;
-    float: right ;
-    font-size: 0.9em;
-    padding-left: 8px ;
-    font-style: normal ;
-    
-    &:hover {
-      
-      //font-weight: bold;
-    }
-  }
-  button.close {
 
-    @extend %circle ;
-
-    max-height: 28px ;
-    line-height: normal ;
-    padding: 3px 6px ;
-    margin-right: -($tag-padding-lr)/2 ;
-
-    &, &:hover, &.hovered, &.actived {
-
-      box-shadow: none ;
-    }
-  }
-  
-  img {
-    
-    @extend %circle ;
-    
-    float: left ;
-    margin: 0px 8px 0px #{-($tag-padding-lr)} ;
+    display: inline-block ;
     height: $tag-height ;
-    width: $tag-height ;
-  }
-  
-  @at-root a.tag {
+    font-size: 0.85em ;
+    font-weight: 500 ;
+    line-height: $tag-height ;
+    font-family: $item-font-family ;
+    padding: 0 $tag-padding-lr ;
+    border-radius: 16px ;
+    margin-bottom: 5px ;
+    margin-right: 5px ;
+    max-width: $tag-max-width ;
 
-    &:hover, &.hovered, &.actived {
+    @include global-bg-look( $tag-colors) ;
+    @include style-overflow-of("line") ;
 
-      text-decoration: none ;
+    .close {
 
-      @include global-bg-look( $tag-h-colors) ;
+        cursor: pointer ;
+        float: right ;
+        font-size: 0.9em;
+        padding-left: 8px ;
+        font-style: normal ;
+
+        &:hover {
+
+            //font-weight: bold;
+        }
     }
-  }
+    button.close {
+
+        @extend %circle ;
+
+        max-height: 28px ;
+        line-height: normal ;
+        padding: 3px 6px ;
+        margin-right: -($tag-padding-lr)/2 ;
+
+        &, &:hover, &.hovered, &.actived {
+
+            box-shadow: none ;
+        }
+    }
+
+    img {
+
+        @extend %circle ;
+
+        float: left ;
+        margin: 0px 8px 0px #{-($tag-padding-lr)} ;
+        height: $tag-height ;
+        width: $tag-height ;
+    }
+
+    @at-root a:visited.tag {
+
+        color: #{ map-get( $tag-colors, 'color')};
+    }
+    @at-root a.tag, a:visited.tag {
+
+        &:hover, &.hovered, &.actived {
+
+            text-decoration: none ;
+
+            @include global-bg-look( $tag-h-colors) ;
+        }
+    }
 }
 
 
 .tags {
-  
-  display: block ;
-  padding: 0.5em ;
-  margin: 0px ;
-  
-  &>li, &>a {
-    
-    @extend .tag ;
-  }
+
+    display: block ;
+    padding: 0.5em ;
+    margin: 0px ;
+
+    &>li, &>a {
+
+        @extend .tag ;
+    }
 }
